--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.1",
     "redoc": "^2.1.4",
@@ -11,9 +11,7 @@
   "name": "openapi",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
